[gd_scene load_steps=30 format=3 uid="uid://i4gw4eoiok5w"]

[ext_resource type="Script" uid="uid://d03ive56d55mu" path="res://environment_scenes/main.gd" id="1_1bvp3"]
[ext_resource type="PackedScene" uid="uid://cj7w44pa3wtl8" path="res://player/player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://c5c7c2avxlum1" path="res://inventory/inventory.tscn" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://do14ugg5i7a4p" path="res://chests/chest.tscn" id="3_7mycd"]
[ext_resource type="Script" uid="uid://06uq0uv2jxlk" path="res://inventory/inventory_interface.gd" id="3_lquwl"]
[ext_resource type="Script" uid="uid://bl7cci2mvndgg" path="res://inventory/inventory_data_equip.gd" id="3_w48qg"]
[ext_resource type="Script" uid="uid://bgl2hbo6a0b2n" path="res://inventory/inventory_data.gd" id="4_5vw27"]
[ext_resource type="Script" uid="uid://qeerjmaj1eqg" path="res://inventory/slot_data.gd" id="5_kek77"]
[ext_resource type="PackedScene" uid="uid://cyura1ymcr10q" path="res://inventory/slot.tscn" id="5_lquwl"]
[ext_resource type="Resource" uid="uid://diipf1wotl7fk" path="res://item/items/apple.tres" id="6_4c57u"]
[ext_resource type="Resource" uid="uid://bwc887cm8f38n" path="res://item/items/blue_book.tres" id="7_efxa6"]
[ext_resource type="Resource" uid="uid://ck427y43u0jv6" path="res://item/items/health_potion.tres" id="9_2cqfq"]
[ext_resource type="Script" uid="uid://cjtsii371x5am" path="res://inventory/click_catcher.gd" id="9_dg77c"]
[ext_resource type="Resource" uid="uid://dqmxglck0r7u6" path="res://item/items/iron_helm.tres" id="10_yaehf"]
[ext_resource type="PackedScene" uid="uid://bevrfdqlbvrqp" path="res://item/pick_up/pick_up.tscn" id="11_efxa6"]
[ext_resource type="PackedScene" uid="uid://p30b8qbm3n7e" path="res://skill_tree/talent_tree.tscn" id="12_yaehf"]
[ext_resource type="PackedScene" uid="uid://dsnrnhk67ms6o" path="res://inventory/hot_bar_inventory.tscn" id="13_ycdy4"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_7dm0k"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_7dm0k")

[sub_resource type="Environment" id="Environment_0xm2m"]
background_mode = 2
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_h2yge"]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_ig7tw"]
data = PackedVector3Array(1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1)

[sub_resource type="Resource" id="Resource_vivmo"]
script = ExtResource("3_w48qg")
slot_datas = Array[ExtResource("5_kek77")]([null])
metadata/_custom_type_script = "uid://c4jshx1ynvgo7"

[sub_resource type="Resource" id="Resource_074og"]
script = ExtResource("5_kek77")
item_data = ExtResource("6_4c57u")
quantity = 15
metadata/_custom_type_script = "uid://cahcjrlh2sdwo"

[sub_resource type="Resource" id="Resource_cegan"]
script = ExtResource("5_kek77")
item_data = ExtResource("7_efxa6")
metadata/_custom_type_script = "uid://cahcjrlh2sdwo"

[sub_resource type="Resource" id="Resource_82xsv"]
script = ExtResource("5_kek77")
item_data = ExtResource("9_2cqfq")
quantity = 5
metadata/_custom_type_script = "uid://cahcjrlh2sdwo"

[sub_resource type="Resource" id="Resource_getpj"]
script = ExtResource("5_kek77")
item_data = ExtResource("10_yaehf")
metadata/_custom_type_script = "uid://cahcjrlh2sdwo"

[sub_resource type="Resource" id="Resource_ycdy4"]
script = ExtResource("4_5vw27")
slot_datas = Array[ExtResource("5_kek77")]([SubResource("Resource_074og"), SubResource("Resource_cegan"), SubResource("Resource_82xsv"), SubResource("Resource_getpj"), null])
metadata/_custom_type_script = "uid://eumbv2n6r6r7"

[sub_resource type="Resource" id="Resource_efxa6"]
script = ExtResource("5_kek77")
item_data = ExtResource("6_4c57u")
quantity = 5
metadata/_custom_type_script = "uid://cahcjrlh2sdwo"

[node name="Main" type="Node"]
script = ExtResource("1_1bvp3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xm2m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
transform = Transform3D(7.4276032, 0, 0, 0, 7.4276032, 0, 0, 0, 7.4276032, 0.04846716, 0, 0)
mesh = SubResource("PlaneMesh_h2yge")

[node name="StaticBody3D" type="StaticBody3D" parent="Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_ig7tw")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1650007, 0)
equip_inventory_data = SubResource("Resource_vivmo")

[node name="Chest" parent="." instance=ExtResource("3_7mycd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 4)
inventory_data = SubResource("Resource_ycdy4")

[node name="PickUp" parent="." instance=ExtResource("11_efxa6")]
transform = Transform3D(0.7015687, 0, -0.7126018, 0, 1, 0, 0.7126018, 0, 0.7015687, -2.5952973, 0.6689168, 1.7623446)
slot_data = SubResource("Resource_efxa6")

[node name="UI" type="CanvasLayer" parent="."]

[node name="talent_tree" parent="UI" instance=ExtResource("12_yaehf")]
visible = false

[node name="InventoryRoot" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickCatcher" type="Control" parent="UI/InventoryRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_dg77c")

[node name="InventoryInterface" type="Control" parent="UI/InventoryRoot"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_lquwl")
metadata/_edit_use_anchors_ = true

[node name="PlayerInventory" parent="UI/InventoryRoot/InventoryInterface" instance=ExtResource("2_0xm2m")]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="EquipInventory" parent="UI/InventoryRoot/InventoryInterface" instance=ExtResource("2_0xm2m")]
layout_mode = 0
offset_left = 450.0
offset_top = 10.0
offset_right = 490.0
offset_bottom = 50.0

[node name="ExternalInventory" parent="UI/InventoryRoot/InventoryInterface" instance=ExtResource("2_0xm2m")]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 50.0

[node name="GrabbedSlot" parent="UI/InventoryRoot/InventoryInterface" instance=ExtResource("5_lquwl")]
visible = false
modulate = Color(1, 1, 1, 0.7529412)
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="HotBarInventory" parent="UI" instance=ExtResource("13_ycdy4")]
offset_left = 10.0
offset_top = 10.0
offset_right = 430.0
offset_bottom = 90.0

[connection signal="visibility_changed" from="UI/InventoryRoot" to="UI/InventoryRoot/InventoryInterface" method="_on_inventory_root_visibility_changed"]
[connection signal="gui_input" from="UI/InventoryRoot/ClickCatcher" to="UI/InventoryRoot/InventoryInterface" method="_on_click_catcher_gui_input"]
[connection signal="drop_slot_data" from="UI/InventoryRoot/InventoryInterface" to="." method="_on_inventory_interface_drop_slot_data"]
[connection signal="gui_input" from="UI/InventoryRoot/InventoryInterface" to="UI/InventoryRoot/InventoryInterface" method="_on_gui_input"]
[connection signal="visibility_changed" from="UI/InventoryRoot/InventoryInterface" to="UI/InventoryRoot/InventoryInterface" method="_on_visibility_changed"]
